--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -17,6 +17,8 @@
         android:layout_height="400dp" />
 
     <TextView
+        android:textSize="16sp"
+        android:visibility="gone"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="-10dp"
@@ -26,7 +28,7 @@
         android:padding="5dp"
         android:layout_alignBottom="@+id/image"
         android:layout_alignEnd="@+id/image"
-        android:text="Hello World Engineering best android developer in the world has been since 1987 with all love for sherin  Ahmed Aboulfotoh"
+        android:text="This is a short description about the image, I hope you like it :)"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
