--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -29,7 +29,7 @@
         android:layout_alignBottom="@+id/image"
         android:layout_alignEnd="@+id/image"
         android:text="This is a short description about the image, I hope you like it :)"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 
